Remove automatic refresh from shipping order dashboard; users can now refresh manually using the button.

--- a/hdi_sale/views/dashboard_views.xml
+++ b/hdi_sale/views/dashboard_views.xml
@@ -202,15 +202,11 @@
               }
             }
 
+            // Initial render after the form loads
             setTimeout(initDashboard, 1000);
 
-            setInterval(function() {
-              var refreshBtn = document.querySelector('button[name="action_refresh_dashboard"]');
-              if (refreshBtn) {
-                refreshBtn.click();
-                setTimeout(initDashboard, 500);
-              }
-            }, 30000);
+            // Automatic refresh removed per request. Users can refresh
+            // manually using the "Làm mới" button in the header.
           })();
         </script>
       </form>
