Update action return types in ShippingOrderSearch and adjust visibility condition in search results

--- a/hdi_sale/views/order_search_views.xml
+++ b/hdi_sale/views/order_search_views.xml
@@ -22,7 +22,7 @@
 
                     <!-- Results Section -->
                     <div class="alert alert-secondary" 
-                         invisible="order_id" 
+                         invisible="not order_id" 
                          role="alert">
                         Chưa có kết quả tìm kiếm
                     </div>
