Add search button to shipping order search form

--- a/hdi_sale/views/order_search_views.xml
+++ b/hdi_sale/views/order_search_views.xml
@@ -10,6 +10,11 @@
           <group>
             <group>
               <field name="search_code" widget="char"/>
+              <button name="action_search" 
+                      string="Tìm kiếm" 
+                      type="object"
+                      class="btn-primary"
+                      icon="fa-search"/>
             </group>
           </group>
 
@@ -50,11 +55,6 @@
         </sheet>
 
         <footer>
-          <button name="action_search"
-            string="Tìm kiếm"
-            type="object"
-            class="btn-primary"
-            invisible="has_results"/>
           <button string="Đóng" class="btn-secondary" special="cancel"/>
         </footer>
       </form>
