--- a/hdi_sale/views/menu.xml
+++ b/hdi_sale/views/menu.xml
@@ -6,7 +6,6 @@
     parent="sale.sale_menu_root"
     sequence="5"/>
 
-
   <!-- Menu Dashboard/Trang chủ -->
   <menuitem id="hdi_express_dashboard"
     name="Trang chủ"
@@ -42,18 +41,46 @@
     sequence="20"
     groups="base.group_no_one"/>
 
-  <!-- Menu cấu hình / dịch vụ vận chuyển -->
-  <menuitem id="hdi_express_config"
-    name="Cài đặt"
+  <!-- Menu Đối soát, công nợ -->
+  <menuitem id="hdi_express_reconcile"
+    name="Đối soát, công nợ"
+    parent="hdi_express"
+    sequence="25"/>
+
+  <!-- Menu con cho Đối soát, công nợ -->
+  <menuitem id="hdi_express_reconcile_paid"
+    name="Danh sách đã trả tiền"
+    parent="hdi_express_reconcile"
+    action="hdi_sale.action_reconciliation_paid"
+    sequence="1"/>
+
+  <!-- Menu Tra cứu -->
+  <menuitem id="hdi_express_search"
+    name="Tra cứu"
     parent="hdi_express"
     sequence="30"/>
 
+  <!-- Menu con: Tìm kiếm phiếu gửi -->
+  <menuitem id="hdi_express_search_order"
+    name="Tìm kiếm phiếu gửi"
+    parent="hdi_express_search"
+    action="action_shipping_order_search"
+    sequence="10"/>
+
+  <!-- Menu Cấu hình -->
+  <menuitem id="hdi_express_config"
+    name="Cài đặt"
+    parent="hdi_express"
+    sequence="40"/>
+
+  <!-- Menu con: Dịch vụ vận chuyển -->
   <menuitem id="hdi_shipping_services"
     name="Dịch vụ vận chuyển"
     parent="hdi_express_config"
     action="hdi_sale.action_main_shipping_service"
     sequence="10"/>
 
+  <!-- Menu con: Dịch vụ cộng thêm -->
   <menuitem id="hdi_additional_shipping_services"
     name="Dịch vụ cộng thêm"
     parent="hdi_express_config"
