--- a/hdi_sale/views/order_search_views.xml
+++ b/hdi_sale/views/order_search_views.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <!-- Form view for searching shipping orders -->
   <record id="view_shipping_order_search_form" model="ir.ui.view">
@@ -10,11 +9,11 @@
           <group>
             <group>
               <field name="search_code" widget="char"/>
-              <button name="action_search" 
-                      string="Tìm kiếm" 
-                      type="object"
-                      class="btn-primary"
-                      icon="fa-search"/>
+              <button name="action_search"
+                string="Tìm kiếm"
+                type="object"
+                class="btn-primary"
+                icon="fa-search"/>
             </group>
           </group>
 
@@ -67,16 +66,8 @@
     <field name="type">ir.actions.act_window</field>
     <field name="res_model">shipping.order.search</field>
     <field name="view_mode">form</field>
-    <field name="view_ids" eval="[(5, 0, 0), (0, 0, {'view_mode': 'form', 'view_id': ref('view_shipping_order_search_form')})]"/>
-    <field name="target">new</field>
+    <field name="views" eval="[(ref('view_shipping_order_search_form'), 'form')]"/>
+    <field name="target">current</field>
     <field name="help">Tìm kiếm thông tin chi tiết phiếu gửi hàng theo mã</field>
   </record>
-
-  <!-- Menu item for search -->
-  <menuitem id="hdi_express_search_order"
-    name="Tìm kiếm phiếu gửi"
-    parent="hdi_express"
-    action="hdi_sale.action_shipping_order_search"
-    sequence="15"/>
 </odoo>
-
